# WebServerMainstreaming

./: CMakeLists.txt  LICENSE  README.md
content/: testTextFile.txt
content/log/: log.txt
examples/: config.ini
src/: Cache.cpp  Cache.h  Defines.h  Logger.cpp  Logger.h  Server.cpp  Server.h  main.cpp
tools/: generate_certificate.bat
